created Distance Algorithim pipelines and dataset.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -6790,17 +6790,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "25272ce2",
-   "metadata": {},
-   "source": [
-    "### Linear Dataframe Exported"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7b6e301",
+   "id": "62b9ea9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6888,29 +6880,137 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f902f1da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tree_processed_df.to_csv(\n",
+    "#     path_or_buf = \"../data/processed/tree_processed_dataset\"\n",
+    "# )"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "5afbda13",
+   "id": "dccf0e7e",
    "metadata": {},
    "source": [
-    "### Tree Processed Dataset Export"
+    "### DIstance Algorithims"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
-   "id": "dc78bec1",
+   "execution_count": 329,
+   "id": "dd8bead2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree_processed_df.to_csv(\n",
-    "    path_or_buf = \"../data/processed/tree_processed_dataset\"\n",
+    "numeric_pipe = Pipeline(\n",
+    "    steps = [\n",
+    "        ('it_imputer', IterativeImputer(max_iter=10, random_state=42)),\n",
+    "        ('winsorizer', Winsorizer(capping_method='iqr', tail='both', fold=1.5)),\n",
+    "        ('power_transformation', PowerTransformer(method='yeo-johnson', standardize=False)),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "id": "2a315bb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_pipe = Pipeline(\n",
+    "    steps = [\n",
+    "        ('it_imputer', SimpleImputer(strategy='most_frequent')),\n",
+    "        ('onehot', OneHotEncoder(handle_unknown='ignore', drop='if_binary', sparse_output=False)),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "id": "a2f28c01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers = [\n",
+    "        ('numeric', numeric_pipe, numeric_features),\n",
+    "        ('categorical', categorical_pipe, categorical_features)\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "id": "841a6dd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_pipeline = Pipeline(\n",
+    "    steps = [\n",
+    "        ('preprocess', preprocessor),\n",
+    "        ('scaling', StandardScaler())\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 335,
+   "id": "61b07b06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_config(transform_output=\"pandas\")\n",
+    "distance_processed_df = final_pipeline.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "id": "7b9820ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance_processed_df.to_csv(\n",
+    "    path_or_buf = \"../data/processed/distance_processed_dataset\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7c0ac49",
+   "metadata": {},
+   "source": [
+    "### Probability Algorithims"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ce58bf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_pipe = Pipeline(\n",
+    "    steps = [\n",
+    "        ('it_imputer', IterativeImputer(max_iter=10, random_state=42)),\n",
+    "        ('winsorizer', Winsorizer(capping_method='iqr', tail='both', fold=1.5)),\n",
+    "        ('power_transformation', PowerTransformer(method='yeo-johnson', standardize=False)),\n",
+    "    ]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd8bead2",
+   "id": "8a205541",
    "metadata": {},
    "outputs": [],
    "source": []
