exported each preprocessor pipeline model dependent via joblib to the models directory as a pkl file.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 515,
    "id": "7b14672e",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,8 @@
     "from feature_engine.outliers import Winsorizer\n",
     "from imblearn.over_sampling import SMOTE, SMOTENC\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn import set_config"
+    "from sklearn import set_config\n",
+    "import joblib"
    ]
   },
   {
@@ -6682,7 +6683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 514,
    "id": "4deb52e8",
    "metadata": {},
    "outputs": [
@@ -6698,7 +6699,7 @@
        " 'cb_person_cred_hist_length']"
       ]
      },
-     "execution_count": 470,
+     "execution_count": 514,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6789,12 +6790,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 518,
    "id": "102038d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_pipeline = Pipeline(\n",
+    "linear_final_pipeline = Pipeline(\n",
     "    steps = [\n",
     "        ('preprocess', preprocessor),\n",
     "        ('polynomial', PolynomialFeatures(degree=2, interaction_only=True, include_bias=False)),\n",
@@ -6805,23 +6806,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 519,
+   "id": "21845a1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../models/linear_preprocessed_pipeline.pkl']"
+      ]
+     },
+     "execution_count": 519,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(linear_final_pipeline, \"../models/linear_preprocessed_pipeline.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ac92e8e7",
    "metadata": {},
    "outputs": [],
    "source": [
     "set_config(transform_output=\"pandas\")\n",
-    "X_train_linear = final_pipeline.fit_transform(X_train)"
+    "X_train_linear = linear_final_pipeline.fit_transform(X_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": null,
    "id": "42a49dd5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test_linear = final_pipeline.transform(X_test)"
+    "X_test_linear = linear_final_pipeline.transform(X_test)"
    ]
   },
   {
@@ -6905,12 +6927,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 524,
    "id": "eb717042",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_pipeline = Pipeline(\n",
+    "tree_final_pipeline = Pipeline(\n",
     "    steps = [\n",
     "        ('preprocess', preprocessor)\n",
     "    ]\n",
@@ -6919,24 +6941,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 525,
+   "id": "fe590044",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../models/tree_preprocessed_pipeline.pkl']"
+      ]
+     },
+     "execution_count": 525,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(tree_final_pipeline, \"../models/tree_preprocessed_pipeline.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4943cc22",
    "metadata": {},
    "outputs": [],
    "source": [
     "set_config(transform_output=\"pandas\")\n",
-    "X_train_tree = final_pipeline.fit_transform(X_train)"
+    "X_train_tree = tree_final_pipeline.fit_transform(X_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": null,
    "id": "7c2f1c02",
    "metadata": {},
    "outputs": [],
    "source": [
     "set_config(transform_output=\"pandas\")\n",
-    "X_test_tree = final_pipeline.transform(X_test)"
+    "X_test_tree = tree_final_pipeline.transform(X_test)"
    ]
   },
   {
@@ -7021,12 +7064,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 526,
    "id": "841a6dd3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_pipeline = Pipeline(\n",
+    "distance_final_pipeline = Pipeline(\n",
     "    steps = [\n",
     "        ('preprocess', preprocessor),\n",
     "        ('scaling', StandardScaler())\n",
@@ -7036,24 +7079,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 527,
+   "id": "fa677a98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../models/distance_preprocessed_pipeline.pkl']"
+      ]
+     },
+     "execution_count": 527,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(distance_final_pipeline, \"../models/distance_preprocessed_pipeline.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "61b07b06",
    "metadata": {},
    "outputs": [],
    "source": [
     "set_config(transform_output=\"pandas\")\n",
-    "X_train_distance = final_pipeline.fit_transform(X_train)"
+    "X_train_distance = distance_final_pipeline.fit_transform(X_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": null,
    "id": "f64b96ec",
    "metadata": {},
    "outputs": [],
    "source": [
     "set_config(transform_output=\"pandas\")\n",
-    "X_test_distance = final_pipeline.transform(X_test)"
+    "X_test_distance = distance_final_pipeline.transform(X_test)"
    ]
   },
   {
@@ -7140,17 +7204,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 529,
    "id": "86f039b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_pipeline = Pipeline(\n",
+    "probability_final_pipeline = Pipeline(\n",
     "    steps = [\n",
     "        ('preprocess', preprocessor),\n",
     "        ('scaling', StandardScaler())\n",
     "    ]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 530,
+   "id": "23862cdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../models/probability_preprocessed_pipeline.pkl']"
+      ]
+     },
+     "execution_count": 530,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(probability_final_pipeline, \"../models/probability_preprocessed_pipeline.pkl\")"
    ]
   },
   {
@@ -7266,17 +7351,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 531,
    "id": "2c6726bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_pipeline = Pipeline(\n",
+    "neural_final_pipeline = Pipeline(\n",
     "    steps = [\n",
     "        ('preprocess', preprocessor),\n",
     "        ('scaling', StandardScaler())\n",
     "    ]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 532,
+   "id": "a24a01fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../models/neural_preprocessed_pipeline.pkl']"
+      ]
+     },
+     "execution_count": 532,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(neural_final_pipeline, \"../models/neural_preprocessed_pipeline.pkl\")"
    ]
   },
   {
