created model prototyping_linear_modeling notebook. Imported X_train, X_test, y_train, y_test

--- a/notebooks/linear_model_prototyping.ipynb
+++ b/notebooks/linear_model_prototyping.ipynb
@@ -19,7 +19,7 @@
     "import missingno as msno\n",
     "\n",
     "\n",
-    "# Modeling\n",
+    "# preprocessing\n",
     "import sklearn.utils.validation\n",
     "import sys\n",
     "from scipy import stats\n",
@@ -35,20 +35,420 @@
     "from feature_engine.outliers import Winsorizer\n",
     "# from imblearn.over_sampling import SMOTE, SMOTENC\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn import set_config"
+    "from sklearn import set_config\n",
+    "\n",
+    "\n",
+    "# Modeling\n",
+    "from sklearn import linear_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "12c11ce3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>numeric__person_age</th>\n",
+       "      <th>numeric__person_income</th>\n",
+       "      <th>numeric__person_emp_length</th>\n",
+       "      <th>numeric__loan_amnt</th>\n",
+       "      <th>numeric__loan_int_rate</th>\n",
+       "      <th>numeric__loan_percent_income</th>\n",
+       "      <th>numeric__cb_person_cred_hist_length</th>\n",
+       "      <th>categorical__person_home_ownership_MORTGAGE</th>\n",
+       "      <th>categorical__person_home_ownership_OTHER</th>\n",
+       "      <th>categorical__person_home_ownership_OWN</th>\n",
+       "      <th>...</th>\n",
+       "      <th>categorical__loan_grade_D categorical__loan_grade_E</th>\n",
+       "      <th>categorical__loan_grade_D categorical__loan_grade_F</th>\n",
+       "      <th>categorical__loan_grade_D categorical__loan_grade_G</th>\n",
+       "      <th>categorical__loan_grade_D categorical__cb_person_default_on_file_True</th>\n",
+       "      <th>categorical__loan_grade_E categorical__loan_grade_F</th>\n",
+       "      <th>categorical__loan_grade_E categorical__loan_grade_G</th>\n",
+       "      <th>categorical__loan_grade_E categorical__cb_person_default_on_file_True</th>\n",
+       "      <th>categorical__loan_grade_F categorical__loan_grade_G</th>\n",
+       "      <th>categorical__loan_grade_F categorical__cb_person_default_on_file_True</th>\n",
+       "      <th>categorical__loan_grade_G categorical__cb_person_default_on_file_True</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.401371</td>\n",
+       "      <td>-0.711319</td>\n",
+       "      <td>0.308085</td>\n",
+       "      <td>0.437175</td>\n",
+       "      <td>-0.033241</td>\n",
+       "      <td>1.134027</td>\n",
+       "      <td>1.212243</td>\n",
+       "      <td>1.19222</td>\n",
+       "      <td>-0.055634</td>\n",
+       "      <td>-0.294188</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.246752</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.119614</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.05986</td>\n",
+       "      <td>-0.035776</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 325 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   numeric__person_age  numeric__person_income  numeric__person_emp_length  \\\n",
+       "0             0.401371               -0.711319                    0.308085   \n",
+       "\n",
+       "   numeric__loan_amnt  numeric__loan_int_rate  numeric__loan_percent_income  \\\n",
+       "0            0.437175               -0.033241                      1.134027   \n",
+       "\n",
+       "   numeric__cb_person_cred_hist_length  \\\n",
+       "0                             1.212243   \n",
+       "\n",
+       "   categorical__person_home_ownership_MORTGAGE  \\\n",
+       "0                                      1.19222   \n",
+       "\n",
+       "   categorical__person_home_ownership_OTHER  \\\n",
+       "0                                 -0.055634   \n",
+       "\n",
+       "   categorical__person_home_ownership_OWN  ...  \\\n",
+       "0                               -0.294188  ...   \n",
+       "\n",
+       "   categorical__loan_grade_D categorical__loan_grade_E  \\\n",
+       "0                                                0.0     \n",
+       "\n",
+       "   categorical__loan_grade_D categorical__loan_grade_F  \\\n",
+       "0                                                0.0     \n",
+       "\n",
+       "   categorical__loan_grade_D categorical__loan_grade_G  \\\n",
+       "0                                                0.0     \n",
+       "\n",
+       "   categorical__loan_grade_D categorical__cb_person_default_on_file_True  \\\n",
+       "0                                          -0.246752                       \n",
+       "\n",
+       "   categorical__loan_grade_E categorical__loan_grade_F  \\\n",
+       "0                                                0.0     \n",
+       "\n",
+       "   categorical__loan_grade_E categorical__loan_grade_G  \\\n",
+       "0                                                0.0     \n",
+       "\n",
+       "   categorical__loan_grade_E categorical__cb_person_default_on_file_True  \\\n",
+       "0                                          -0.119614                       \n",
+       "\n",
+       "   categorical__loan_grade_F categorical__loan_grade_G  \\\n",
+       "0                                                0.0     \n",
+       "\n",
+       "   categorical__loan_grade_F categorical__cb_person_default_on_file_True  \\\n",
+       "0                                           -0.05986                       \n",
+       "\n",
+       "   categorical__loan_grade_G categorical__cb_person_default_on_file_True  \n",
+       "0                                          -0.035776                      \n",
+       "\n",
+       "[1 rows x 325 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train = pd.read_csv(\n",
+    "    filepath_or_buffer = \"../data/processed/X_train_linear.csv\"\n",
+    ")\n",
+    "X_train.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "74ab39a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>numeric__person_age</th>\n",
+       "      <th>numeric__person_income</th>\n",
+       "      <th>numeric__person_emp_length</th>\n",
+       "      <th>numeric__loan_amnt</th>\n",
+       "      <th>numeric__loan_int_rate</th>\n",
+       "      <th>numeric__loan_percent_income</th>\n",
+       "      <th>numeric__cb_person_cred_hist_length</th>\n",
+       "      <th>categorical__person_home_ownership_MORTGAGE</th>\n",
+       "      <th>categorical__person_home_ownership_OTHER</th>\n",
+       "      <th>categorical__person_home_ownership_OWN</th>\n",
+       "      <th>...</th>\n",
+       "      <th>categorical__loan_grade_D categorical__loan_grade_E</th>\n",
+       "      <th>categorical__loan_grade_D categorical__loan_grade_F</th>\n",
+       "      <th>categorical__loan_grade_D categorical__loan_grade_G</th>\n",
+       "      <th>categorical__loan_grade_D categorical__cb_person_default_on_file_True</th>\n",
+       "      <th>categorical__loan_grade_E categorical__loan_grade_F</th>\n",
+       "      <th>categorical__loan_grade_E categorical__loan_grade_G</th>\n",
+       "      <th>categorical__loan_grade_E categorical__cb_person_default_on_file_True</th>\n",
+       "      <th>categorical__loan_grade_F categorical__loan_grade_G</th>\n",
+       "      <th>categorical__loan_grade_F categorical__cb_person_default_on_file_True</th>\n",
+       "      <th>categorical__loan_grade_G categorical__cb_person_default_on_file_True</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.472769</td>\n",
+       "      <td>0.188676</td>\n",
+       "      <td>1.134904</td>\n",
+       "      <td>-0.739835</td>\n",
+       "      <td>-0.982623</td>\n",
+       "      <td>-0.915386</td>\n",
+       "      <td>1.455922</td>\n",
+       "      <td>1.19222</td>\n",
+       "      <td>-0.055634</td>\n",
+       "      <td>-0.294188</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.246752</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.119614</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.05986</td>\n",
+       "      <td>-0.035776</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 325 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   numeric__person_age  numeric__person_income  numeric__person_emp_length  \\\n",
+       "0             1.472769                0.188676                    1.134904   \n",
+       "\n",
+       "   numeric__loan_amnt  numeric__loan_int_rate  numeric__loan_percent_income  \\\n",
+       "0           -0.739835               -0.982623                     -0.915386   \n",
+       "\n",
+       "   numeric__cb_person_cred_hist_length  \\\n",
+       "0                             1.455922   \n",
+       "\n",
+       "   categorical__person_home_ownership_MORTGAGE  \\\n",
+       "0                                      1.19222   \n",
+       "\n",
+       "   categorical__person_home_ownership_OTHER  \\\n",
+       "0                                 -0.055634   \n",
+       "\n",
+       "   categorical__person_home_ownership_OWN  ...  \\\n",
+       "0                               -0.294188  ...   \n",
+       "\n",
+       "   categorical__loan_grade_D categorical__loan_grade_E  \\\n",
+       "0                                                0.0     \n",
+       "\n",
+       "   categorical__loan_grade_D categorical__loan_grade_F  \\\n",
+       "0                                                0.0     \n",
+       "\n",
+       "   categorical__loan_grade_D categorical__loan_grade_G  \\\n",
+       "0                                                0.0     \n",
+       "\n",
+       "   categorical__loan_grade_D categorical__cb_person_default_on_file_True  \\\n",
+       "0                                          -0.246752                       \n",
+       "\n",
+       "   categorical__loan_grade_E categorical__loan_grade_F  \\\n",
+       "0                                                0.0     \n",
+       "\n",
+       "   categorical__loan_grade_E categorical__loan_grade_G  \\\n",
+       "0                                                0.0     \n",
+       "\n",
+       "   categorical__loan_grade_E categorical__cb_person_default_on_file_True  \\\n",
+       "0                                          -0.119614                       \n",
+       "\n",
+       "   categorical__loan_grade_F categorical__loan_grade_G  \\\n",
+       "0                                                0.0     \n",
+       "\n",
+       "   categorical__loan_grade_F categorical__cb_person_default_on_file_True  \\\n",
+       "0                                           -0.05986                       \n",
+       "\n",
+       "   categorical__loan_grade_G categorical__cb_person_default_on_file_True  \n",
+       "0                                          -0.035776                      \n",
+       "\n",
+       "[1 rows x 325 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test = pd.read_csv(\n",
+    "    filepath_or_buffer = \"../data/processed/X_test_linear.csv\"\n",
+    ")\n",
+    "X_test.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fa02fa9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   loan_status\n",
+       "0        False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train = pd.read_csv(\n",
+    "    filepath_or_buffer = \"../data/interim/y_train.csv\"\n",
+    ")\n",
+    "y_train.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "22f46585",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   loan_status\n",
+       "0        False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test = pd.read_csv(\n",
+    "    filepath_or_buffer = \"../data/interim/y_test.csv\"\n",
+    ")\n",
+    "y_test.head(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12c11ce3",
+   "id": "b533a1ef",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pd.read_csv(\n",
-    "    filepath_or_buffer = \n",
-    ")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
